<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nytech.com.travelmantics.DealActivity" >
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_upload"
        android:icon="@drawable/ic_file_upload"
        android:title="@string/action_upload"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
